--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 									<section>
 										<span class="icons"><img src="assets/webfonts/consult.svg"></span>
 										<h3>Консультации</h3>
-										<p>Консультации по организации среды</p>
+										<p>Организация среды дома и на работе</p>
 									</section>
 								</div>
 							</div>
@@ -279,7 +279,7 @@
 							<section>
 								<h3>Morbi sed volutpat</h3>
 								<p>Sed vulputate sem tristique cursus sed magna gravida non lorem ipsum dolor sit amet.<p>
-								<p><a href="#" class="major">(000) 000-0000</a></p>
+								<p><a href="#" class="major">+7-911-173-98-77</a></p>
 							</section>
 						</div>
 						<div class="copyright">
