--- a/index.html
+++ b/index.html
@@ -28,24 +28,24 @@
 							<nav id="nav">
 								<ul>
 									<li class="current"><a href="index.html">Главная</a></li>
-									<li>
-										<a href="#" class="icon solid fa-angle-down">Статьи</a>
-										<ul>
-											<li><a href="#">Option One</a></li>
-											<li><a href="#">Option Two</a></li>
-											<li><a href="#">Option Three</a></li>
-											<li>
-												<a href="#">Submenu</a>
-												<ul>
-													<li><a href="#">Option One</a></li>
-													<li><a href="#">Option Two</a></li>
-													<li><a href="#">Option Three</a></li>
-													<li><a href="#">Option Four</a></li>
-												</ul>
-											</li>
-										</ul>
-									</li>
-									<li><a href="doc.html">Документы</a></li>
+<!--									<li>-->
+<!--										<a href="#" class="icon solid fa-angle-down">Статьи</a>-->
+<!--										<ul>-->
+<!--											<li><a href="#">Option One</a></li>-->
+<!--											<li><a href="#">Option Two</a></li>-->
+<!--											<li><a href="#">Option Three</a></li>-->
+<!--											<li>-->
+<!--												<a href="#">Submenu</a>-->
+<!--												<ul>-->
+<!--													<li><a href="#">Option One</a></li>-->
+<!--													<li><a href="#">Option Two</a></li>-->
+<!--													<li><a href="#">Option Three</a></li>-->
+<!--													<li><a href="#">Option Four</a></li>-->
+<!--												</ul>-->
+<!--											</li>-->
+<!--										</ul>-->
+<!--									</li>-->
+									<li><a href="documents.html">Документы</a></li>
 									
 								</ul>
 							</nav>
@@ -92,8 +92,10 @@
 						<div class="inner alt">
 							<div class="content">
 								<div class="flexconteiner">
-									<div class="imgbox"><img class="contentimage" src="images/zdorovie1.jpg" alt="здоровьесберегающие технологии"></div>
+<!--									<div class="imgbox"><img class="contentimage" src="images/zdorovie1.jpg" alt="здоровьесберегающие технологии"></div>-->
 									<div class="textbox">
+										<h3>О нас</h3>
+										<p>Компания «Наука и образование будущего» единственная на рынке России предоставляет весь пакет здоровьесберегающих технологий, включая поставку оборудования, обучение и сопровождение, сервисное обслуживание. <br><br>Наш коллектив - международная команда преподавателей, инженеров и  ученых. Наличие собственного производства, которое согласно нашей стратегии постоянно расширяется, дополняется постоянным мониторингом продуктов и поставщиков, что позволяет качественно и своевременно выполнять достигнутые соглашения.</p>
 										<h3>В чём проблема?</h3>
 										<p>В СССР был установлен факт ежегодного ухудшения здоровья учащихся. В ходе исследований в конце 1970-х годов группой учёных под руководством профессора В.Ф.Базарного в НИИ медицинских проблем Севера было установлено, что здоровье детей ухудшается в результате их обездвиженности, вызванной существующей организацией учебного процесса и используемым оборудованием.</p>
 
